--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Control Flow and Functions Coding Challenge</title>
+    <title>Control Flow and Functions Challenge</title>
 </head>
 <body>
+    <h1>JavaScript Control Flow and Functions Coding Challenge</h1>
     <script src="cc_4.js"></script>
 </body>
 </html>
