Task 3 - Inventory Depletion.

--- a/index.html
+++ b/index.html
@@ -10,3 +10,9 @@
     <script src="cc_4.js"></script>
 </body>
 </html>
+
+let responses = 0; 
+do { responses++;
+    
+} while (responses < 3);
+console.log(`Resposes: {finalAmount}`);
